--- a/localisation/POR_Portugal_l_english.yml
+++ b/localisation/POR_Portugal_l_english.yml
@@ -296,7 +296,7 @@ IberianFront:0 "이베리아 동맹"
 
 ###############Events############################
 portu.1.t:0 "포르투갈이 식민 제국을 포기하다"
-portu.1.d:0 "에스타도 노보의 붕괴와 포르투갈 공화국의 재수립은 서방국가들에게 안도감을 주는 민주주의의 또 다른 승리입니다. 그러나 누가 이 다시 태어난 공화국이 이전에 다른 민주국가가 가지 않은 길을 갈 것이라고 예상할 수 있었겠습니까? 어제 포르투갈 정부는 제국주의적 야망을 접고 전 세계의 자국 식민지를 독립시키기 시작하겠다고 발표했습니다. 사회주의자들이나 인권 운동가들은 이 결정을 축하하는 반면에, 포르투갈 보수당과 국가주의자들은 이 결정에 대해 격분하고 있습니다. 모든 인간은 자유로울 권리가 있다는 선언과 함께 정부가 적극적으로 그 정책을 실행하면서, 유럽을 중심으로 새로운 물결이 시작됐습니다. 세계의 다른 제국들은 지금 이것이 그들의 식민지에 어떤 영향을 미칠 지 걱정하고 있습니다."
+portu.1.d:0 "에스타도 노보의 붕괴와 포르투갈 공화국의 재수립은 서방국가들에게 안도감을 주는 민주주의의 또 다른 승리입니다. 그러나 누가 이 다시 태어난 공화국이 이전에 다른 민주국가가 가지 않은 길을 갈 것이라고 예상할 수 있었겠습니까? 어제 포르투갈 정부는 제국주의적 야망을 접고 전 세계의 자국 식민지를 독립시키기 시작하겠다고 발표했습니다. 사회주의자들이나 인권 운동가들은 이 결정을 축하하는 반면에, 포르투갈 보수당과 국민주의자들은 이 결정에 대해 격분하고 있습니다. 모든 인간은 자유로울 권리가 있다는 선언과 함께 정부가 적극적으로 그 정책을 실행하면서, 유럽을 중심으로 새로운 물결이 시작됐습니다. 세계의 다른 제국들은 지금 이것이 그들의 식민지에 어떤 영향을 미칠 지 걱정하고 있습니다."
 portu.1.a:0 "역사에 남을 중대한 사건이다!"
 
 portu.2.t:0 "에스타도 노보 독재가 무너지다!"
