--- a/localisation/bel_focus_l_english.yml
+++ b/localisation/bel_focus_l_english.yml
@@ -271,8 +271,8 @@
  WAL_neutrality_DEF:0 "왈로니아"
  WAL_socialist:0 "왈로니아"
  WAL_socialist_DEF:0 "왈로니아"
- WAL_fascism:0 "국가주의 왈로니아국"
- WAL_fascism_DEF:0 "국가주의 왈로니아국"
+ WAL_fascism:0 "국민주의 왈로니아국"
+ WAL_fascism_DEF:0 "국민주의 왈로니아국"
  WAL_communism:0 "왈로니아 소비에트 공화국"
  WAL_communism_DEF:0 "왈로니아 소비에트 공화국"
 
