--- a/localisation/britain_focus_l_english.yml
+++ b/localisation/britain_focus_l_english.yml
@@ -85,7 +85,7 @@
   UK_power_KING_desc:0 "영국의 정치 체제는 비효율적인 것으로 판명되어 영국 국민들을 실망시켰습니다. 파업이 만연하고 하원이 일을 처리하지 못함에 따라, 왕은 더이상 참을 수 없었습니다. When we give him the all-clear, the King will deliver a sentence that will forever change Britain; 'I hereby utilise my royal decree to dissolve this House at once.'"
   UK_power_PM:0 "인민을 따라"
   UK_power_PM_desc:0 "The Magna Carta was developed in order to restrict the monarch's power and authority. If we were to abandon this centuries old document, the British people would be outraged. We must reinforce the Prime Minister and Parliament's authority, for the good of our country."
-  UK_league:0 "Reinforce the Alliance with the French"
+  UK_league:0 "프랑스와의 동맹 강화"
   UK_league_desc:0 "Our Alliance with the French has been created to prevent atrocities like the ones during the Great War. We must stick to this system that we created, and for that we must renew our alliance."
   UK_transfer_labrador:0 "뉴펀들랜드법 승인"
   UK_transfer_labrador_desc:0 "Currently, Newfoundland and Labrador are a separate colony of the British Empire than Canada. Canada has been requesting posession of these territories since the Act of Confederation. It's time we give the Canadians what they want."
