--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -927,8 +927,8 @@
  NEP_democratic_ADJ:0 "네팔"
  NEP_neutrality_ADJ:0 "네팔"
  NEP_communism_ADJ:0 "네팔"
- NIC_fascism:0 "국가주의 니카라과국"
- NIC_fascism_DEF:0 "국가주의 니카라과국"
+ NIC_fascism:0 "국민주의 니카라과국"
+ NIC_fascism_DEF:0 "국민주의 니카라과국"
  NIC_democratic:0 "니카라과 공화국"
  NIC_democratic_DEF:0 "니카라과 공화국"
  NIC_neutrality:0 "니카라과"
@@ -939,8 +939,8 @@
  NIC_democratic_ADJ:0 "니카라과"
  NIC_neutrality_ADJ:0 "니카라과"
  NIC_communism_ADJ:0 "니카라과"
- PAN_fascism:0 "국가주의 파나마국"
- PAN_fascism_DEF:0 "국가주의 파나마국"
+ PAN_fascism:0 "국민주의 파나마국"
+ PAN_fascism_DEF:0 "국민주의 파나마국"
  PAN_democratic:0 "파나마"
  PAN_democratic_DEF:0 "파나마"
  PAN_neutrality:0 "파나마국"
@@ -951,8 +951,8 @@
  PAN_democratic_ADJ:0 "파나마"
  PAN_neutrality_ADJ:0 "파나마"
  PAN_communism_ADJ:0 "파나마"
- PAR_fascism:0 "국가주의 파라과이국"
- PAR_fascism_DEF:0 "국가주의 파라과이국"
+ PAR_fascism:0 "국민주의 파라과이국"
+ PAR_fascism_DEF:0 "국민주의 파라과이국"
  PAR_democratic:0 "파라과이 공화국"
  PAR_democratic_DEF:0 "파라과이 공화국"
  PAR_neutrality:0 "파라과이"
@@ -983,8 +983,8 @@
  PER_conservatives_ADJ:0 "이란"
  PER_socialist_ADJ:0 "이란"
 
- PHI_fascism:0 "국가주의 필리핀국"
- PHI_fascism_DEF:0 "국가주의 필리핀국"
+ PHI_fascism:0 "국민주의 필리핀국"
+ PHI_fascism_DEF:0 "국민주의 필리핀국"
  PHI_democratic:0 "필리핀"
  PHI_democratic_DEF:0 "필리핀"
  PHI_conservatives:0 "필리핀"
@@ -1010,8 +1010,8 @@
  PRU_democratic_ADJ:0 "페루"
  PRU_neutrality_ADJ:0 "페루"
  PRU_communism_ADJ:0 "페루"
- SAF_fascism:0 "국가주의 남아프리카국"
- SAF_fascism_DEF:0 "국가주의 남아프리카국"
+ SAF_fascism:0 "국민주의 남아프리카국"
+ SAF_fascism_DEF:0 "국민주의 남아프리카국"
  SAF_democratic:0 "남아프리카"
  SAF_democratic_DEF:0 "남아프리카"
  SAF_neutrality:0 "보어 공화국"
@@ -1046,20 +1046,20 @@
  SIA_democratic_ADJ:0 "태국"
  SIA_neutrality_ADJ:0 "시암"
  SIA_communism_ADJ:0 "태국"
- SIK_fascism:0 "신장 독재정"
- SIK_fascism_DEF:0 "신장 독재정"
- SIK_democratic:0 "신장 독립 공화국"
- SIK_democratic_DEF:0 "신장 독립 공화국"
- SIK_neutrality:0 "신장 군벌"
- SIK_neutrality_DEF:0 "신장 군벌"
- SIK_communism:0 "신장 공화국"
- SIK_communism_DEF:0 "신장 공화국"
- SIK_fascism_ADJ:0 "신장"
- SIK_democratic_ADJ:0 "신장"
- SIK_neutrality_ADJ:0 "신장"
- SIK_communism_ADJ:0 "신장"
- TAN_fascism:0 "국가주의 투바 공화국"
- TAN_fascism_DEF:0 "국가주의 투바 공화국"
+ SIK_fascism:0 "신강독재정"
+ SIK_fascism_DEF:0 "신강독재정"
+ SIK_democratic:0 "신강독립공화국"
+ SIK_democratic_DEF:0 "신강독립공화국"
+ SIK_neutrality:0 "신강군벌"
+ SIK_neutrality_DEF:0 "신강군벌"
+ SIK_communism:0 "신강공화국"
+ SIK_communism_DEF:0 "신강공화국"
+ SIK_fascism_ADJ:0 "신강"
+ SIK_democratic_ADJ:0 "신강"
+ SIK_neutrality_ADJ:0 "신강"
+ SIK_communism_ADJ:0 "신강"
+ TAN_fascism:0 "국민주의 투바 공화국"
+ TAN_fascism_DEF:0 "국민주의 투바 공화국"
  TAN_democratic:0 "투바 독립 공화국"
  TAN_democratic_DEF:0 "투바 독립 공화국"
  TAN_neutrality:0 "투바국"
@@ -1094,12 +1094,12 @@
  VEN_democratic_ADJ:0 "베네수엘라"
  VEN_neutrality_ADJ:0 "베네수엘라"
  VEN_communism_ADJ:0 "베네수엘라"
- YUN_fascism:0 "서창 제국"
- YUN_fascism_DEF:0 "서창 제국"
- YUN_democratic:0 "서창 독립 공화국"
- YUN_democratic_DEF:0 "서창 독립 공화국"
- YUN_neutrality:0 "운남 군벌"
- YUN_neutrality_DEF:0 "운남 군벌"
+ YUN_fascism:0 "서창제국"
+ YUN_fascism_DEF:0 "서창제국"
+ YUN_democratic:0 "서창독립공화국"
+ YUN_democratic_DEF:0 "서창독립공화국"
+ YUN_neutrality:0 "운남군벌"
+ YUN_neutrality_DEF:0 "운남군벌"
  YUN_communism:0 "서창 소비에트국"
  YUN_communism_DEF:0 "서창 소비에트국"
  YUN_fascism_ADJ:0 "서창"
@@ -1292,18 +1292,18 @@
  
  GXC_fascism:0 "제3광서군벌"
  GXC_fascism_DEF:0 "제3광서군벌"
- GXC_democratic:0 "광서 독립공화국"
- GXC_democratic_DEF:0 "광서 독립공화국"
+ GXC_democratic:0 "광서독립공화국"
+ GXC_democratic_DEF:0 "광서독립공화국"
  GXC_neutrality:0 "광서군벌"
  GXC_neutrality_DEF:0 "광서군벌"
- GXC_communism:0 "주장 사회주의 공화국"
- GXC_communism_DEF:0 "주장 사회주의 공화국"
+ GXC_communism:0 "주장사회주의공화국"
+ GXC_communism_DEF:0 "주장사회주의공화국"
  GXC_fascism_ADJ:0 "광서"
  GXC_democratic_ADJ:0 "광서"
  GXC_neutrality_ADJ:0 "광서"
  GXC_communism_ADJ:0 "광서"
  SHX_fascism:0 "중국"
- SHX_fascism_DEF:0 "국가주의 중국"
+ SHX_fascism_DEF:0 "국민주의 중국"
  SHX_democratic:0 "중화민국"
  SHX_democratic_DEF:0 "중화민국"
  SHX_neutrality:0 "청나라"
@@ -1314,14 +1314,14 @@
  SHX_democratic_ADJ:0 "중국"
  SHX_neutrality_ADJ:0 "중국"
  SHX_communism_ADJ:0 "중국"
- XSM_fascism:0 "서북삼마 자유국"
- XSM_fascism_DEF:0 "서북삼마 자유국"
+ XSM_fascism:0 "서북삼마자유국"
+ XSM_fascism_DEF:0 "서북삼마자유국"
  XSM_democratic:0 "후이 공화국"
  XSM_democratic_DEF:0 "후이 공화국"
  XSM_neutrality:0 "서북삼마"
  XSM_neutrality_DEF:0 "서북삼마"
- XSM_communism:0 "마 인민공화국"
- XSM_communism_DEF:0 "마 인민공화국"
+ XSM_communism:0 "마인민공화국"
+ XSM_communism_DEF:0 "마인민공화국"
  XSM_fascism_ADJ:0 "마"
  XSM_democratic_ADJ:0 "마"
  XSM_neutrality_ADJ:0 "마"
@@ -1396,8 +1396,8 @@
  SYR_conservatives_DEF:0 "시리아"
  SYR_neutrality:0 "시리아 왕국"
  SYR_neutrality_DEF:0 "시리아 왕국"
- SYR_fascism:0 "국가주의 시리아국"
- SYR_fascism_DEF:0 "국가주의 시리아국"
+ SYR_fascism:0 "국민주의 시리아국"
+ SYR_fascism_DEF:0 "국민주의 시리아국"
  SYR_communism:0 "시리아 사회주의국"
  SYR_communism_DEF:0 "시리아 사회주의국"
  SYR_socialist:0 "시리아 사회주의국"
@@ -1559,8 +1559,8 @@
  LAO_democratic_DEF:0 "라오스 공화국"
  LAO_neutrality:0 "라오스 왕국"
  LAO_neutrality_DEF:0 "라오스 왕국"
- LAO_communism:0 "라오 인민민주주의공화국"
- LAO_communism_DEF:0 "라오 인민민주주의공화국"
+ LAO_communism:0 "라오스 인민민주공화국"
+ LAO_communism_DEF:0 "라오스 인민민주공화국"
  LAO_fascism_ADJ:0 "라오스"
  LAO_democratic_ADJ:0 "라오스"
  LAO_neutrality_ADJ:0 "라오스"
@@ -1756,10 +1756,10 @@
  BOT_communism_ADJ:0 "보츠와나"
  MAN_fascism:0 "만주제국"
  MAN_fascism_DEF:0 "만주제국"
- MAN_democratic:0 "만주 공화국"
- MAN_democratic_DEF:0 "만주 공화국"
- MAN_neutrality:0 "봉천 군벌"
- MAN_neutrality_DEF:0 "봉천 군벌"
+ MAN_democratic:0 "만주공화국"
+ MAN_democratic_DEF:0 "만주공화국"
+ MAN_neutrality:0 "봉천군벌"
+ MAN_neutrality_DEF:0 "봉천군벌"
  MAN_communism:2 "만주자유민주주의인민공화국"
  MAN_communism_DEF:1 "만주자유민주주의인민공화국"
  MAN_fascism_ADJ:0 "만주"
@@ -1923,8 +1923,8 @@
  EQG_democratic_ADJ:0 "적도기니"
  EQG_neutrality_ADJ:0 "적도기니"
  EQG_communism_ADJ:0 "적도기니"
- CMR_fascism:1 "국가주의 카메룬"
- CMR_fascism_DEF:1 "국가주의 카메룬"
+ CMR_fascism:1 "국민주의 카메룬"
+ CMR_fascism_DEF:1 "국민주의 카메룬"
  CMR_democratic:1 "카메룬 공화국"
  CMR_democratic_DEF:1 "카메룬 공화국"
  CMR_neutrality:0 "카메룬"
@@ -1983,8 +1983,8 @@
  DAH_democratic_ADJ:1 "베냉"
  DAH_neutrality_ADJ:0 "다호메이"
  DAH_communism_ADJ:0 "다호메이"
- TOG_fascism:1 "국가주의 토고"
- TOG_fascism_DEF:1 "국가주의 토고"
+ TOG_fascism:1 "국민주의 토고"
+ TOG_fascism_DEF:1 "국민주의 토고"
  TOG_democratic:1 "토고 공화국"
  TOG_democratic_DEF:1 "토고 공화국"
  TOG_neutrality:0 "토고"
@@ -2091,8 +2091,8 @@
  SEN_democratic_ADJ:0 "세네갈"
  SEN_neutrality_ADJ:1 "월로프"
  SEN_communism_ADJ:0 "세네갈"
- GAM_fascism:1 "국가주의 감비아"
- GAM_fascism_DEF:1 "국가주의 감비아"
+ GAM_fascism:1 "국민주의 감비아"
+ GAM_fascism_DEF:1 "국민주의 감비아"
  GAM_democratic:0 "감비아"
  GAM_democratic_DEF:1 "감비아"
  GAM_neutrality:1 "감비아 이슬람 공화국"
@@ -2399,8 +2399,8 @@
  SCO_democratic_ADJ:0 "스코틀랜드"
  SCO_neutrality_ADJ:0 "스코틀랜드"
  SCO_communism_ADJ:1 "알바"
- SRL_fascism:1 "국가주의 실론"
- SRL_fascism_DEF:1 "국가주의 실론"
+ SRL_fascism:1 "국민주의 실론"
+ SRL_fascism_DEF:1 "국민주의 실론"
  SRL_democratic:1 "스리랑카 민주사회주의공화국"
  SRL_democratic_DEF:1 "스리랑카 민주사회주의공화국"
  SRL_neutrality:0 "스리랑카"
@@ -2556,7 +2556,7 @@
  MLT_neutrality_DEF:2 "몰타 주권군사기사단"
  MLT_communism:1 "몰타 코뮌"
  MLT_communism_DEF:1 "몰타 코뮌"
- MLT_fascism_ADJ:1 "크루세이더"
+ MLT_fascism_ADJ:1 "십자군"
  MLT_democratic_ADJ:0 "몰타"
  MLT_neutrality_ADJ:1 "구호기사단"
  MLT_communism_ADJ:0 "몰타"
@@ -2651,8 +2651,8 @@
  RUS_1_democratic_DEF:0 "러시아 공화국"
  RUS_1_neutrality:0 "러시아 공화국"
  RUS_1_neutrality_DEF:0 "러시아 공화국"
- RUS_1_fascism:0 "국가주의 러시아"
- RUS_1_fascism_DEF:0 "국가주의 러시아"
+ RUS_1_fascism:0 "국민주의 러시아"
+ RUS_1_fascism_DEF:0 "국민주의 러시아"
  RUS_1_communism:0 "소비에트 연방"
  RUS_1_communism_DEF:0 "소비에트 연방"
  RUS_1_conservatives:0 "러시아 공화국"
@@ -2671,8 +2671,8 @@
  RUS_democratic_DEF:0 "러시아 제국"
  RUS_neutrality:0 "러시아 제국"
  RUS_neutrality_DEF:0 "러시아 제국"
- RUS_fascism:0 "국가주의 러시아"
- RUS_fascism_DEF:0 "국가주의 러시아"
+ RUS_fascism:0 "국민주의 러시아"
+ RUS_fascism_DEF:0 "국민주의 러시아"
  RUS_communism:0 "러시아 공화국"
  RUS_communism_DEF:0 "러시아 공화국"
  RUS_conservatives:0 "러시아 제국"
@@ -2691,8 +2691,8 @@
  RUS_2_democratic_DEF:0 "러시아 공화국"
  RUS_2_neutrality:0 "러시아 제국"
  RUS_2_neutrality_DEF:0 "러시아 제국"
- RUS_2_fascism:0 "국가주의 러시아"
- RUS_2_fascism_DEF:0 "국가주의 러시아"
+ RUS_2_fascism:0 "국민주의 러시아"
+ RUS_2_fascism_DEF:0 "국민주의 러시아"
  RUS_2_communism:0 "러시아 소비에트 사회주의 공화국"
  RUS_2_communism_DEF:0 "러시아 소비에트 사회주의 공화국"
  RUS_2_conservatives:0 "러시아 제국"
@@ -3205,7 +3205,7 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  BAL_socialist_ADJ:0 "발트"
 
  QNG_fascism:0 "중국"
- QNG_fascism_DEF:0 "국가주의 중국"
+ QNG_fascism_DEF:0 "국민주의 중국"
  QNG_democratic:0 "중화민국"
  QNG_democratic_DEF:0 "중화민국"
  QNG_neutrality:0 "청나라"
