--- a/localisation/game_rules_l_english.yml
+++ b/localisation/game_rules_l_english.yml
@@ -185,7 +185,7 @@
  RULE_OPTION_COMMUNIST_RUS_AI_DESC:0 "러시아 AI는 소련 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_RUS_AI_DESC:0 "러시아 AI는 러시아 공화국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_CONSERVATIVES_RUS_AI_DESC:0 "러시아 AI는 입헌군주제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_FASCIST_RUS_AI_DESC:0 "러시아 AI는 국가주의-군사국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_FASCIST_RUS_AI_DESC:0 "러시아 AI는 국민주의-군사국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ATTACK_TURKEY_RUS_AI_DESC:0 "러시아 AI는 '청년 튀르크 반란'에서 물러서지 않을 것이며 서방의 독립보장에도 불구하고 터키에 전쟁을 선포할 것입니다."
  
  #France#
