--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -107,7 +107,7 @@
  GER_welfare_state:0 "복지 국가"
  GER_welfare_state_desc:0 "복지 국가는 국민의 사회적, 경제적 복지를 보호하고 증진하는데 국가가 핵심적인 역할을 하는 정부 개념입니다. 그것은 기회의 평등, 부의 공평한 분배, 그리고 좋은 삶을 위한 최소한의 조항을 스스로 이용하지 못하는 사람들에 대한 공적 책임의 원칙에 기초하고 있습니다."
  GER_fascist:0 "독일의 영광 회복!"
- GER_fascist_desc:0 "이제 다시 통일한 이상 회복과 통일이라는 정책을 추진해야 하는데 국가주의 정당은 우리가 회복하고 삶을 개선할 수 있도록 해 줄 것입니다."
+ GER_fascist_desc:0 "이제 다시 통일한 이상 회복과 통일이라는 정책을 추진해야 하는데 국민주의 정당은 우리가 회복하고 삶을 개선할 수 있도록 해 줄 것입니다."
  GER_state_market:0 "국가 주도 경제"
  GER_state_market_desc:0 "국가가 운영하는 경제는 우리의 노력에 더 많은 안정과 유연성을 제공할 것이고 우리나라를 통제할 수 있을 것입니다."
  GER_corporatism:0 "협동조합주의"
