--- a/localisation/grk_focus_l_english.yml
+++ b/localisation/grk_focus_l_english.yml
@@ -79,7 +79,7 @@
   GRK_new_trains_desc:0 "철도 용량을 향상시키기 위해서는 이미 완성된 철도에서 운행할 수 있는 보다 효율적인 열차를 개발해야 합니다. 이렇게 되면 우리 군의 이동속도는 물론 인프라 효율성도 높아질 것입니다."
   GRK_world_recognition:0 "국제 인식 추진"
   GRK_world_recognition_desc:0 "우리 나라는 많은 조약의 산물입니다. 불행하게도, 우리는 여전히 세계 공동체로부터 공식적으로 인정받은 적이 없습니다. 이제 우리가 그것을 바꿀 때입니다. 우리가 많이 필요로 하는 국제적 인정을 받는 가장 좋은 방법은 세계의 강대국들과 무역과 계약을 맺는 것입니다."
-  GRK_fascist:0 "국가주의 열정"
+  GRK_fascist:0 "국민주의 열정"
   GRK_fascist_desc:0 "우리나라의 현 정권은 실패했습니다. 극좌는 우리 삶의 방식에 커다란 위협이 되고 있습니다. 유일한 해결책은 강력하고 안정적인 중앙 정부이고, 그것을 지지할 유일한 사람들은... 극우입니다."
   GRK_freicorps:0 "재향 군인 소집"
   GRK_freicorps_desc:0 "대전에 참전했던 우리 군의 참전용사들은 우리 군을 향상시키기 위해 다시 부르기에 완벽한 사람들입니다. 물론 이번에는 최고의 대우를 받도록 하겠습니다. 결국, 그들이 없었다면, 우리는 프랑스와 러시아에 의해 사라졌을 것입니다."
