--- a/localisation/hun_localisation_l_english.yml
+++ b/localisation/hun_localisation_l_english.yml
@@ -5,7 +5,7 @@
  hung.1000.a:0 "사회주의자들은 이 나라에 안정을 가져다 줄 것이다."
  hung.1000.b:0 "마르크스주의자들은 헝가리의 꿈을 이룰 것이다."
  hung.1001.t:0 "미클로시 호르티의 처형"
- hung.1001.d:0 "국가주의적인 해군 사령관, 미클로시 호르티는 우리가 보수정부를 타도한 이후 추종자들과 함께 숨어 있었습니다. 그는 내전을 일으키기 위해 충성을 다했던 옛 군대를 모을 계획이었던 것으로 보입니다. 다행히도 그는 아군에 의해 사전에 발견되었습니다. 벨라 쿤은 새 공화국을 위해서는 그를 살려 두는 것이 너무 위험하다고 결정했습니다. 그래서 그는 처형될 것입니다."
+ hung.1001.d:0 "국민주의적인 해군 사령관, 미클로시 호르티는 우리가 보수정부를 타도한 이후 추종자들과 함께 숨어 있었습니다. 그는 내전을 일으키기 위해 충성을 다했던 옛 군대를 모을 계획이었던 것으로 보입니다. 다행히도 그는 아군에 의해 사전에 발견되었습니다. 벨라 쿤은 새 공화국을 위해서는 그를 살려 두는 것이 너무 위험하다고 결정했습니다. 그래서 그는 처형될 것입니다."
  hung.1001.a:0 "그 개자식을 교수형에 처해라." 
  hung.1002.t:0 "오토 폰 합스부르크 암살"
  hung.1002.d:0 "현재 오스트리아국은 신생 헝가리 공화국에 가장 큰 위협이 되고 있습니다. 그들의 나라는 잃어버린 땅을 되찾기를 열망하고 있고 헝가리는 그것의 일부입니다. 오스트리아를 상대로 더 나은 기회를 갖기 위해 우리는 그들이 가장 사랑하는 군주를 죽임으로써 그들의 나라를 불안정하게 해야 합니다. 새로 구성된 국가 보호국이 이번 암살을 실행할 예정입니다."
@@ -232,7 +232,7 @@
  hun_party_elections:0 "선거"
  hun_party_elections_desc:0 "힘의 균형이 마르크스주의자와 사회주의자들 사이에서 이동하고 있습니다. 누가 주도할지 국민이 결정해야 합니다."
  hun_execute_horthy:0 "호르티 사냥"
- hun_execute_horthy_desc:0 "이 미친 제독은 우리 정부가 부상한 이후부터 잠적해 왔습니다. 이 제독은 헝가리에서는 사회주의와 마르크스주의에 대한 국가주의적 행동과 증오로 잘 알려져 있습니다. 군대과 정치권은 그가 그의 인기와 함께 반혁명을 조직할 수 있다고 우려하고 있습니다. 그는 반드시 발견되어 처형되어야 합니다!"
+ hun_execute_horthy_desc:0 "이 미친 제독은 우리 정부가 부상한 이후부터 잠적해 왔습니다. 이 제독은 헝가리에서는 사회주의와 마르크스주의에 대한 국민주의적 행동과 증오로 잘 알려져 있습니다. 군대과 정치권은 그가 그의 인기와 함께 반혁명을 조직할 수 있다고 우려하고 있습니다. 그는 반드시 발견되어 처형되어야 합니다!"
  hun_increase_output:0 "공장 생산량 증대"
  hun_increase_output_desc:0 "우리나라의 산업 경제는 나라의 크기에 비해 훌륭합니다. 그러나 그것은 단순히 세계의 강대국들을 따라갈 수 없습니다. 우리 산업을 키울 땅이 없다면, 기존 산업을 발전시켜야 하는데, 주로 새로운 기계로 발전시켜야 합니다."
  hun_new_construction:0 "국가 주도의 건설 현장"
