--- a/localisation/ita_focus_l_english.yml
+++ b/localisation/ita_focus_l_english.yml
@@ -109,8 +109,8 @@ ITA_red_europe:0 "붉은 유럽"
 ITA_red_europe_desc:0 "We shall not stop untill all of Europe sees the glory of communism and socialist labor! Amdiamo Italia!"
 ITA_war_FRA:0 "프랑스 노동자 해방"
 ITA_war_FRA_desc:0 "The French have been exploiting their own people like they have been exploiting us. Show the people of France what true freedom is!"
-ITA_nationalist_party:0 "국가주의 정당"
-ITA_nationalist_party_desc:0 "무솔리니와 그의 국가주의자들은 이탈리아를 영광으로 이끌 것입니다!"
+ITA_nationalist_party:0 "국민주의 정당"
+ITA_nationalist_party_desc:0 "무솔리니와 그의 국민주의자들은 이탈리아를 영광으로 이끌 것입니다!"
 ITA_ties_with_GER:0 "독일과의 유대"
 ITA_ties_with_GER_desc:0 "We need allies. That much is very clear. The best place to look is Nationalist Germany. Try to establish ties with them first."
 ITA_german_exercice:0 "독일과의 연구 협약"
@@ -172,7 +172,7 @@ ITA_improved_war_idea:0 "신식 이탈리아군"
 victor_emmanuel_1:0 "비토리오 에마누엘레 3세"
 ITA_proletarian_govt_idea:0 "프롤레타리아 정부"
 
-ITA_spr_have_to_be_fascist:0 "효과를 보려면, 스페인이 국가주의 정부여야만 합니다."
+ITA_spr_have_to_be_fascist:0 "효과를 보려면, 스페인이 국민주의 정부여야만 합니다."
 ITA_mussolini_dies:0 "무솔리니는 죽을 것입니다"
 ITA_africore:0 "§G리비아 해안의 정착, 산업화 및 코어화 결정이 열립니다!§!"
 ITA_africore2:0 "§G리비아 내지의 정착, 산업화 및 코어화 결정이 열립니다!§!"
