--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -10,9 +10,9 @@
  conservatives:0 "보수주의"
  conservatives_noun:0 "보수주의"
  conservatives_subtype_desc:0 "보수주의는 문화와 문명의 맥락에서 전통적인 사회 제도를 촉진하는 정치·사회 철학입니다. 보수주의의 중심에는 전통, 인간의 불완전성, 유기적인 사회, 계급과 권위와 재산권이 있습니다."
- fascism:0 "국가주의"
+ fascism:0 "국민주의"
  conservatives_subtype_desc:0 "개인의 자유를 존중하는 오랜 철학적 전통을 통해, 자유주의는 이러한 권리를 보장하는 것을 국가의 제일 기능으로 간주합니다."
- fascism_noun:0 "국가주의"
+ fascism_noun:0 "국민주의"
  fascism_desc:0 "전체주의 체제"
  fascism_subtype:0 "파시즘"
  fascism_subtype_desc:0 "다양한 국수주의 운동을 아우르는 파시즘은 강력한 지도자 아래 국민을 단결케 하여 국가에 헌신하는 것을 숭배합니다."
@@ -38,7 +38,7 @@
  anarchist_communism:0 "아나르코공산주의"
  anarchist_communism_desc:0 "국가 없는 사회를 지향하는 공산주의 사상을 아우르는 이념인 아나르코공산주의는 과도기적 사회주의 국가의 사상을 피하고 자발적 결사와 상호원조에 기초한 사회를 선호합니다."
  nazism:0 "나치즘"
- nazism_desc:0 "극도의 국가주의에 뿌리를 두는 국가사회주의는, 독일 우월주의 사상에 의해 주도됩니다. '총통'이라 불리는 절대권력을 보유한 지도자 아래에서 공격적인 팽창주의와 국민이 단결하는 전체주의 국가를 지향합니다."
+ nazism_desc:0 "극도의 국민주의에 뿌리를 두는 국가사회주의는, 독일 우월주의 사상에 의해 주도됩니다. '총통'이라 불리는 절대권력을 보유한 지도자 아래에서 공격적인 팽창주의와 국민이 단결하는 전체주의 국가를 지향합니다."
  fascism_ideology:0 "파시즘"
  fascism_ideology_desc:0 "다양한 국수주의 운동을 아우르는 파시즘은 강력한 지도자 아래 국민을 단결케 하여 국가에 헌신하는 것을 숭배합니다."
  falangism:0 "팔랑헤주의"
@@ -490,7 +490,7 @@
  SIK_democratic_party_desc:0 "국민당 지지자"
  SIK_socialist_party:0 "KMT"
  SIK_socialist_party_desc:0 "국민당 지지자"
- SIK_fascism_party:0 "위구르 국가주의자"
+ SIK_fascism_party:0 "위구르 국민주의자"
  TIB_neutrality_party:0 "레팅 린포체"
  YUN_neutrality_party:0 "국민당"
  MON_communism_party:0 "MAN"
