--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -11,7 +11,7 @@
  RUS_defence_desc:0 "우리나라가 여전히 구식 기반시설의 개선에 어려움을 겪고 있는 상황에서, 우리의 방어에 집중하고 수많은 적들의 공격에 대비하는 것이 최선일지도 모릅니다. 우리는 그 강력한 러시아 곰의 진실성을 보장해야 합니다!"
  RUS_land_army:0 "육군 현대화"
  RUS_land_army_desc:0 "만약 우리가 우리 군대 중 어느 하나라도 증원할 계획이라면, 지상군의 현대화는 그 방면에서 가장 필요한 첫걸음입니다. 옛것을 버리고, 새것을 받아들입니다."
- RUS_nationalist_reforms:0 "국가주의 개혁"
+ RUS_nationalist_reforms:0 "국민주의 개혁"
  RUS_nationalist_reforms_desc:0 "러시아가 진정으로 팽창하여 더욱 강대국이 되고자 합니다면 우리는 민족주의자들, 우파의 급진자들, 그리고 진짜 전쟁광들을 향해 나아가야 합니다."
  RUS_militarism:0 "러시아 군국주의"
  RUS_militarism_desc:0 "인력은 조국의 확장에 필수적이기 때문에 군대 선전, 청소년 군사 프로그램, 군사 학교 등의 광범위한 정책을 펴야 합니다."
@@ -239,7 +239,7 @@
  RUS_medium_tank_desc:0 "현재 3종류의 탱크가 있습니다. 중전차, 중형전차, 경전차. 그들은 모두 장단점이 있습니다."
  RUS_light_tank:0 "모로조프의 설계"
  RUS_light_tank_desc:0 "현재 3종류의 탱크가 있습니다. 중전차, 중형전차, 경전차. 그들은 모두 장단점이 있습니다."
- RUS_establish_russia:0 "국가주의 러시아 수립"
+ RUS_establish_russia:0 "국민주의 러시아 수립"
  RUS_establish_russia_desc:0 "러시아는 지금 새로운 민족주의 지도하에 있습니다. 우리는 러시아 정부에 안정과 힘을 제공하기 위해 우리 정부를 강화하는 것이 중요합니다."
  RUS_army_modernization:0 "현대화 시작"
  RUS_army_modernization_desc:0 "공중전과 해전의 가능성이 증가하고 있음에도 불구하고 지상전은 내일의 전쟁에서 여전히 중요합니다. 준비만 하면 참호 지옥의 부활을 피할 수 있습니다."
