--- a/localisation/rus_ideas_l_english.yml
+++ b/localisation/rus_ideas_l_english.yml
@@ -9,7 +9,7 @@
  RUS_national_unrest:0 "국가적 불안"
  RUS_peasant_unrest:0 "다양한 인종"
  RUS_sleeping_giant:0 "잠자는 거인"
- RUS_path_of_order:0 "러시아 국가주의"
+ RUS_path_of_order:0 "러시아 국민주의"
  RUS_towards_democracy:0 "러시아 민주주의"
  RUS_colonial_power:0 "식민 강국"
  RUS_tsar_nicolas:0 "승리자 차르 니콜라스 II"
@@ -45,7 +45,7 @@
  RUS_general_staff_political:0 "정치적으로 연결된 참모단"
  RUS_cult_of_sci:0 "과학 추종"
  RUS_restored_empire:0 "모국을 위하여!"
- RUS_polish_nationalism:0 "폴란드 국가주의"
+ RUS_polish_nationalism:0 "폴란드 국민주의"
  RUS_july_strikes:0 "대파업"
  RUS_negociated_strikes:0 "모스크바 협정"
  RUS_alaska_purchase_rus:0 "알래스카 구매"
