--- a/localisation/tur_focus_l_english.yml
+++ b/localisation/tur_focus_l_english.yml
@@ -57,8 +57,8 @@
  TUR_calphate_desc:0 "After the Kostantiniyye uprising, our people are demanding the restoration of the caliphate that had brought our nation fame and glory. Today we proclaim the title of Caliphate, but who will be our Caliph?"
  TUR_calph:0 "옛 칼리프 재초빙"
  TUR_calph_desc:0 "Abdülmecid II was the last Caliph of the Ottoman empire before it was abolished by the Kemalists. Due to the fact that he is in exile right now, we must re-invite him back to the country. All hail the Padişah!."
- TUR_muslim_nat:0 "이슬람 국가주의"
- TUR_muslim_nat_desc:0 "비록 우리가 우리의 오래된 투르크화 정책을 폐기하고 있을지라도, 우리는 민족주의나 인종을 기반으로 하지 않고, 종교를 바탕으로 이슬람교 아래 연합된 국가를 효과적으로 창조해 내는 국가주의를 장려해야 합니다."
+ TUR_muslim_nat:0 "이슬람 국민주의"
+ TUR_muslim_nat_desc:0 "비록 우리가 우리의 오래된 투르크화 정책을 폐기하고 있을지라도, 우리는 민족주의나 인종을 기반으로 하지 않고, 종교를 바탕으로 이슬람교 아래 연합된 국가를 효과적으로 창조해 내는 국민주의를 장려해야 합니다."
  TUR_guardian_council:0 "수호위원회 수립"
  TUR_guardian_council_desc:0 "Instead of re-inviting the old Caliph, we can establish a Guardian Council. A Guardian Council is group of expert Islamic scholars, these officals will be elected, but then they will hold supreme power."
  TUR_jihad:0 "지하드 선포"
