--- a/localisation/usa_focus_l_english.yml
+++ b/localisation/usa_focus_l_english.yml
@@ -118,7 +118,7 @@
  US_black_chamber:0 "블랙 챔버 작전"
  US_black_chamber_Desc:0 "브라질과 아르헨티나의 정부는 우리에게 유리하도록 쉽게 전복될 수 있습니다. 우리는 외무부 보안국과 방첩국을 이용하여 이 정부들을 전복시키고 친미 정부들로 교체하려고 노력해야 합니다."
  US_preemptive_intervention:0 "선제적 개입"
- US_preemptive_intervention_desc:0 "베네수엘라는 초국가주의 정부 하에서 국경을 확장하는 것을 목표로 하고 있습니다. 우리는 단순히 그것이 일어나도록 허락할 수 없습니다. 팍스 아메리카나는 계속되어야 합니다!"
+ US_preemptive_intervention_desc:0 "베네수엘라는 초국민주의 정부 하에서 국경을 확장하는 것을 목표로 하고 있습니다. 우리는 단순히 그것이 일어나도록 허락할 수 없습니다. 팍스 아메리카나는 계속되어야 합니다!"
  US_recognize_BAV:0 "바이에른의 권리 지지"
  US_recognize_BAV_desc:0 "바이에른은 주어진 것보다 더 많은 신용을 받을 가치가 있는 미승인국입니다. 그들은 범독일 통일의 명분을 위해 국민을 하나로 뭉쳤습니다. 그들과 관계를 늘리는 것이 가장 나쁜 생각은 아닐지도 모릅니다."
  US_recognize_GER:0 "프로이센 인식 지속"
