--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -2,7 +2,7 @@
  VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! victory points = §Y$POINTS$§!"  
  VICTORY_POINTS_6521:0 "베를린"
  VICTORY_POINTS_692:0 "뮌헨"
- VICTORY_POINTS_6469:0 "에센"
+ VICTORY_POINTS_6469:0 "에센&뒤셀도르프"
  VICTORY_POINTS_9347:0 "함부르크"
  VICTORY_POINTS_9570:0 "브레슬라우"
  VICTORY_POINTS_241:0 "빌헬름스하펜"
@@ -21,6 +21,7 @@
  VICTORY_POINTS_6488:0 "프랑크푸르트"
  VICTORY_POINTS_9517:0 "슈투트가르트"
  VICTORY_POINTS_11544:0 "뉘른베르크"
+ VICTORY_POINTS_11560:0 "마인츠"
  VICTORY_POINTS_708:0 "아우크스부르크"
  VICTORY_POINTS_6287:0 "코펜하겐"
  VICTORY_POINTS_3325:0 "오덴사"
@@ -47,6 +48,8 @@
  VICTORY_POINTS_9692:0 "브라티슬라바"
  VICTORY_POINTS_9660:0 "부다페스트"
  VICTORY_POINTS_11610:0 "페치"
+ VICTORY_POINTS_10497:0 "바트만"
+ VICTORY_POINTS_11853:0 "에르주름"
  VICTORY_POINTS_11659:0 "데브레첸"
  VICTORY_POINTS_391:0 "암스테르담"
  VICTORY_POINTS_3211:0 "헤이그"
@@ -73,6 +76,7 @@
  VICTORY_POINTS_3768:0 "그르노블"
  VICTORY_POINTS_6449:0 "셰르부르"
  VICTORY_POINTS_6536:0 "로리앙"
+ VICTORY_POINTS_6535:0 "뮌스터"
  VICTORY_POINTS_6657:0 "라로셸"
  VICTORY_POINTS_6766:0 "툴루즈"
  VICTORY_POINTS_9434:0 "르아브르"
@@ -187,7 +191,7 @@
  VICTORY_POINTS_121:0 "야로슬라블"
  VICTORY_POINTS_306:0 "스몰렌스크"
  VICTORY_POINTS_413:0 "보로네시"
- VICTORY_POINTS_418:0 "하르키우"
+ VICTORY_POINTS_418:0 "하리코프"
  VICTORY_POINTS_957:0 "블라디보스토크"
  VICTORY_POINTS_1278:0 "우파"
  VICTORY_POINTS_1459:0 "타슈켄트"
@@ -510,7 +514,7 @@
  VICTORY_POINTS_495:0 "도르트문트"
  VICTORY_POINTS_540:0 "플리머스"
  VICTORY_POINTS_657:0 "콘스탄차"
- VICTORY_POINTS_778:0 "샤모니"
+ VICTORY_POINTS_778:0 "안시"
  VICTORY_POINTS_904:0 "뒤즈제"
  VICTORY_POINTS_911:0 "툴롱"
  VICTORY_POINTS_925:0 "안코나"
@@ -533,7 +537,7 @@
  VICTORY_POINTS_4464:0 "빌럭시"
  VICTORY_POINTS_5074:0 "아덴"
  VICTORY_POINTS_6300:0 "로지스"
- VICTORY_POINTS_6524:0 "에르푸르트"
+ VICTORY_POINTS_3561:0 "에르푸르트"
  VICTORY_POINTS_6882:0 "뉴어크"
  VICTORY_POINTS_6973:0 "라스페치아"
  VICTORY_POINTS_6984:0 "볼티모어"
@@ -577,7 +581,7 @@
  VICTORY_POINTS_6318:0 "맨체스터"
  VICTORY_POINTS_11405:0 "자포리자"
  VICTORY_POINTS_11561:0 "크리비리흐"
- VICTORY_POINTS_9461:0 "루한스크"
+ VICTORY_POINTS_9461:0 "보로실로프그라드"
  VICTORY_POINTS_3734:0 "크라스노다르"
  VICTORY_POINTS_11349:0 "르제프"
  VICTORY_POINTS_8011:0 "벵갈루루"
@@ -737,7 +741,6 @@
  VICTORY_POINTS_564:0 "카셀"
  VICTORY_POINTS_425:0 "바이마르"
  VICTORY_POINTS_11360:0 "엠덴"
- VICTORY_POINTS_11388:0 "뮌스터"
  VICTORY_POINTS_9509:0 "함"
  VICTORY_POINTS_3423:0 "코블렌츠"
  VICTORY_POINTS_3299:0 "레겐스부르크"
@@ -752,6 +755,8 @@
  VICTORY_POINTS_708:0 "아우크스부르크"
  VICTORY_POINTS_3673:0 "클라겐푸르트"
  VICTORY_POINTS_9665:0 "벨스"
+ VICTORY_POINTS_9522:0 "아헨"
+ VICTORY_POINTS_6549:0 "풀다"
  VICTORY_POINTS_732:0 "린츠"
  VICTORY_POINTS_11612:0 "필라흐"
  VICTORY_POINTS_11564:0 "리예카"
@@ -925,16 +930,4 @@
  VICTORY_POINTS_12414:0 "언스"
  VICTORY_POINTS_12017:0 "화이화"
  VICTORY_POINTS_10472:0 "아르다한"
- VICTORY_POINTS_1208:0 "쿠칭"
- VICTORY_POINTS_726:0 "레온"
- VICTORY_POINTS_3933:0 "팜플로나"
- VICTORY_POINTS_3954:0 "카스페"
- VICTORY_POINTS_12857:0 "시디이프니"
- VICTORY_POINTS_924:0 "산타렝"
- VICTORY_POINTS_6933:0 "베자"
- VICTORY_POINTS_970:0 "세투발"
- VICTORY_POINTS_2115:0 "나미브"
- VICTORY_POINTS_6666:0 "주네브"
- VICTORY_POINTS_9638:0 "바젤"
- VICTORY_POINTS_9523:0 "베르사유"
  
