--- a/localisation/aus_focus_l_english.yml
+++ b/localisation/aus_focus_l_english.yml
@@ -13,13 +13,13 @@
   AUS_one_party_desc:0 "새 오스트리아에는 다른 정당이 필요없습니다... 대오스트리아가 승리할 것입니다. 우리는 반대파를 쓸어버릴 것입니다!"
   AUS_war_preparations:0 "전쟁 준비"
   AUS_war_preparations_desc:0 "우리나라는 대전 후 완전히 멸망했습니다. 우리는 한때 영광스러웠던 우리의 군대를 재건해야 합니다."
-  AUS_nationalist_education:0 "국가주의 교육"
+  AUS_nationalist_education:0 "국민주의 교육"
   AUS_nationalist_education_desc:0 "젊은이들은 우리의 미래이며, 앞으로 그들의 지지를 얻을 수 있는 유일한 방법은 오스트리아 교육 체계 내에서 우리의 총통을 확고히 하는 것이다."
   AUS_new_austria:0 "오스트리아의 발흥"
   AUS_new_austria_desc:0 "오스트리아는 항상 무시할 수 없는 세력입니다. 대전이 그것을 바꾸지 않았습니다. 오스트리아를 현재의 국경으로 제한하는 조약을 파기합니다. 오스트리아의 독수리가 다시 한번 일어설 때입니다!"
 
   AUS_democratic_power:0 "중앙 유럽의 등불"
-  AUS_democratic_power_desc:0 "우리는 스파르타시스트, 국가주의자들, 그리고 국민이 다스려야 한다는 견해에 반대하는 사람들에 둘러싸여 있습니다. 우리는 모든 사람들이 오고 싶어하는 나라로서 중앙 유럽 내에서 희망의 등불이 될 것입니다!"
+  AUS_democratic_power_desc:0 "우리는 스파르타시스트, 국민주의자들, 그리고 국민이 다스려야 한다는 견해에 반대하는 사람들에 둘러싸여 있습니다. 우리는 모든 사람들이 오고 싶어하는 나라로서 중앙 유럽 내에서 희망의 등불이 될 것입니다!"
   AUS_universal_sufferage:0 "여성 투표권 확대"
   AUS_universal_sufferage_desc:0 "국민이 통치하는 국가의 근본적 측면 중 하나는 모두가 투표할 수 있는 권리이다. 현재 우리 선거에서는 여성이 투표할 수 없습니다. 이 문제를 해결해야 합니다."
   AUS_ban_paramilitary:0 "준군사조직 급습"
